--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "masterbranch",springcloud-config/config-dev.yml version = 1"
+  info: "master branch,springcloud-config/config-dev.yml version = 1"
